[package]
name = "adventofcode_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name = "day01_a"
path = "src/day01/day01_a.rs"

[[bin]]
name = "day01_b"
path = "src/day01/day01_b.rs"

[[bin]]
name = "day02_a"
path = "src/day02/day02_a.rs"

[[bin]]
name = "day02_b"
path = "src/day02/day02_b.rs"

[[bin]]
name = "day03_a"
path = "src/day03/day03_a.rs"

[[bin]]
name = "day03_b"
path = "src/day03/day03_b.rs"

[[bin]]
name = "day04_a"
path = "src/day04/day04_a.rs"

[[bin]]
name = "day04_b"
path = "src/day04/day04_b.rs"

[[bin]]
name = "day05_a"
path = "src/day05/day05_a.rs"

[[bin]]
name = "day05_b"
path = "src/day05/day05_b.rs"

[[bin]]
name = "day06_a"
path = "src/day06/day06_a.rs"

[[bin]]
name = "day06_b"
path = "src/day06/day06_b.rs"

[[bin]]
name = "day07_a"
path = "src/day07/day07_a.rs"

[[bin]]
name = "day07_b"
path = "src/day07/day07_b.rs"